fix bugs on safari closes #1

--- a/source/sass/id.scss
+++ b/source/sass/id.scss
@@ -1,6 +1,8 @@
 #work {
   h1 {
-    margin-left: 10%;
-    margin-right: 10%;
+    @include breakpoint($mobile) {
+      margin-left: 10%;
+      margin-right: 10%;
+    }
   }
 }
