--- a/source/sass/timeline.scss
+++ b/source/sass/timeline.scss
@@ -7,7 +7,6 @@
     li:first-child:before {
       background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 50%, $primary 51%, $primary 100%);
     }
-
     li:last-child:before {
       background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 50%, $primary 51%, $primary 100%);
     }
@@ -42,16 +41,17 @@
         width: 1em;
         height: 1em;
         border-radius: 50%;
+        top: 50%
       }
 
       &:before {
         left: -.05em;
         height: 100%;
         width: .1em;
+        top: 0;
       }
 
       & > div {
-        margin-right: 10em;
         @include breakpoint($mobile) {
           margin: 0;
         }
@@ -61,7 +61,7 @@
   }
 
   @include part(item) {
-    width: 18em;
+    flex-grow: 1;
     @include breakpoint($mobile) {
       width: 100%;
     }
@@ -78,7 +78,10 @@
 
   @include part(description) {
     line-height: 2em;
+    flex-grow: 1;
+    text-align: right;
     @include breakpoint($mobile) {
+      text-align: center;
       width: 100%;
       padding-top: 1em;
       line-height: 1.4em;
